Fix: spacing and text-breaking

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -333,6 +333,10 @@
     .nav-level-1 > .nav-item i {
       font-size: 1.5em;
       margin-right: .5em;
+
+      &.icon-letter {
+        margin-right: 0;
+      }
     }
 
     > .search-control {
