--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -305,6 +305,8 @@
 
         &:first-of-type {
           padding-left: 1.5em;
+          text-overflow: ellipsis;
+          overflow: hidden;
         }
       }
 
